--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "findfreespace-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
